--- a/templates/quests/edit_quest.html.twig
+++ b/templates/quests/edit_quest.html.twig
@@ -1,8 +1,17 @@
 <div class="container">
     <form action="{{ path('save_quest') }}" method="POST">
         <input type="hidden" name="id" value="{{ quest.Id }}">
-        <div class="row">Content:<input type="textarea" name="Content" value="{{ quest.Content }}" required></div>
-        <div class="row">Date:<input type="date" min="2019-07-16" max="2019-12-31" name="EndDate" required></div>
+        {% if is_granted('ROLE_ADMIN') %}
+            <div class="row">Content:<input type="textarea" name="Content" value="{{ quest.Content }}" required></div>
+            <div class="row">Date:<input type="date" min="{{ minDate }}" max="{{ maxDate }}" name="EndDate" required>
+            </div>
+            <div class="row"><select name="user" required>
+                    {% for user in users %}
+                        <option value="{{ user.id }}" selected>{{ user.login }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+        {% endif %}
         <div class="row"><select name="Status" required>
                 <option value=0 {% if quest.Status == 0 %}selected{% endif %}>0%</option>
                 <option value=20 {% if quest.Status == 20 %}selected{% endif %}>20%</option>
