--- a/templates/posts/edit_post.html.twig
+++ b/templates/posts/edit_post.html.twig
@@ -9,6 +9,9 @@
             border-top-left-radius: 5px;
             border-top-right-radius: 5px;
         }
+        #post_form_name{
+            margin: 30px 10px;
+        }
     </style>
     <h2 class="mt-3 mb-4">Edit your Post</h2>
     <div class="form">
@@ -28,4 +31,7 @@
         </a>
         {{ form_end(form) }}
     </div>
+    <script>
+         document.querySelector("#post_form_name").className += "btn btn-secondary";
+    </script>
 {% endblock %}
