--- a/templates/posts/new_post.html.twig
+++ b/templates/posts/new_post.html.twig
@@ -1,22 +1,36 @@
 {% extends 'mainpage/main.html.twig' %}
 {% block content %}
-<style>
-    .container-fluid{
-        background: white; 
-        padding: 30px; 
-        border: 1px solid lightgray; 
-        border-top: 3px solid gray; 
-        border-top-left-radius: 5px; 
-        border-top-right-radius: 5px;
-    }
+    <style>
+        .container-fluid {
+            background: white;
+            padding: 30px;
+            border: 1px solid lightgray;
+            border-top: 3px solid gray;
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+        }
+        .form {
+            background: white;
+            padding: 30px;
+            border: 1px solid lightgray;
+            border-top: 3px solid gray;
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+        }
+        #post_form_name {
+            margin: 30px 10px;
+        }
     </style>
     <div class="container-fluid mt-5">
-    
+
         <h1 class="mb-5">Add new Post</h1>
-    
+
         {{ form_start(form) }}
         {{ form_widget(form) }}
         <button class="btn btn-dark mt-3">Add Post</button>
         {{ form_end(form) }}
     </div>
+    <script>
+        document.querySelector("#post_form_name").className += "btn btn-secondary";
+    </script>
 {% endblock %}
