show post on frontend

--- a/templates/posts/edit_post.html.twig
+++ b/templates/posts/edit_post.html.twig
@@ -27,7 +27,7 @@
 
         <button class="btn btn-dark mt-3">Edit Post</button>
         <a href="/posts">
-            <button class="btn btn-primary mt-3 ml-2">Back</button>
+            <div class="btn btn-primary mt-3 ml-2" href="/posts">Back</div>
         </a>
         {{ form_end(form) }}
     </div>
