--- a/templates/posts/show_post.html.twig
+++ b/templates/posts/show_post.html.twig
@@ -1,5 +1,47 @@
-{% if post == true %}
-    <h1>{{ post.Title }}</h1>
-    <p style="font-weight: bold;">{{ post.Date|date("F jS \\a\\t g:ia") }}</p>
-    <p>{{ post.Content }}</p>
-{% endif %}
+{% extends('mainpage/main.html.twig') %}
+{% block content %}
+    <style>
+        .post {
+            background: white;
+            padding: 30px;
+            border: 1px solid lightgray;
+            border-top: 3px solid gray;
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+            color: black;
+            word-wrap: break-word;
+        }
+    </style>
+    <div class="post container">
+        <div class="row">
+            <div class="col-6">
+                <h1>Post:</h1>
+
+                {% if post == true %}
+                    <p style="font-weight: bold;"><h4>Date:</h4>
+                        {{ post.Date|date("F jS \\a\\t g:ia") }}</p>
+                    <p><h4>Author:</h4>
+                        {{ post.User.Login }}</p>
+                    <p><h4>Title:</h4>
+                        {{ post.Title }}</p>
+                    <p><h4>Content:</h4>
+                        {{ post.Content }}</p>
+                {% endif %}
+            </div>
+            <div class="col-6">
+                <h1>Photo:</h1>
+
+                {% if photoPath is defined %}
+                    <img class="mt-3" style="height: 300px; width: auto; border-radius: 5px; border: 2px solid gray; margin-bottom: 30px;" src="{{ asset('uploads/photos/') }}{{ photoPath }}">
+                {% else %}
+                    <div style="width: 300px; height: 200px; border-radius: 5px; border: 2px solid gray; text-align: center; margin-bottom: 30px; padding-top: 70px; ">
+                        <h1>No image</h1>
+                    </div>
+                {% endif %}
+            </div>
+        </div>
+        <a href="/posts">
+            <div class="btn btn-lg btn-primary mt-3 mb-4" href="/posts">Back</div>
+        </a>
+    </div>
+{% endblock %}
