--- a/templates/mainpage/sidebar.html.twig
+++ b/templates/mainpage/sidebar.html.twig
@@ -105,6 +105,13 @@
                                 </li>
                             </ul>
                         </li>
+                        <li class="nav-item archive">
+                            <a class="nav-link button" href="{{ path('app_register') }}"
+                               id="{{ path('app_register') }}">
+                                <i class="fa fa-circle-o nav-icon"></i>
+                                <p>Create user</p>
+                            </a>
+                        </li>
                     {% endif %}
                     <!--*********************************************************-->
                 </ul>
