--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,16 +1,22 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}Register{% endblock %}
-
-{% block body %}
-    <h1>Register</h1>
-
-    <div class="container">
-        {{ form_start(registrationForm) }}
+{% extends 'mainpage/main.html.twig' %}
+{% block content %}
+    <style>
+        .container-fluid {
+            background: white;
+            padding: 30px;
+            border: 1px solid lightgray;
+            border-top: 3px solid gray;
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+        }
+    </style>
+    <div class="container-fluid mt-5">
+        <h1>Create new user</h1>
+        <div class="m-3">{{ form_start(registrationForm) }}</div>
         {{ form_row(registrationForm.login) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword) }}
-        <button class="btn">Register</button>
+        <div class="mt-2">{{ form_row(registrationForm.email) }}</div>
+        <div class="mt-2">{{ form_row(registrationForm.plainPassword) }}</div>
+        <button class="btn btn-dark mt-3">Register</button>
         {{ form_end(registrationForm) }}
     </div>
 {% endblock %}
