--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -12,10 +12,15 @@
     </style>
     <div class="container-fluid mt-5">
         <h1>Create new user</h1>
-        <div class="m-3">{{ form_start(registrationForm) }}</div>
-        {{ form_row(registrationForm.login) }}
-        <div class="mt-2">{{ form_row(registrationForm.email) }}</div>
+        {{ form_start(registrationForm, {'start_attr': {'class': 'mt-3'}}) }}
+        {{ form_row(registrationForm.login, {'row_attr': {'class': 'mt-2'}}) }}
+        {{ form_row(registrationForm.email, {'row_attr': {'class': 'mt-2'}}) }}
         <div class="mt-2">{{ form_row(registrationForm.plainPassword) }}</div>
+        <div class="mt-2 mb-2" style="font-weight: bold;">Role:</div>
+        <select class="browser-default custom-select" name="roles" required>
+            <option value="ROLE_ADMIN" selected>Admin</option>
+            <option value="ROLE_USER">User</option>
+        </select>
         <button class="btn btn-dark mt-3">Register</button>
         {{ form_end(registrationForm) }}
     </div>
