--- a/templates/quests/new_quest.html.twig
+++ b/templates/quests/new_quest.html.twig
@@ -1,8 +1,20 @@
-<div class="container">
-    <form action="{{ path('add_quest') }}" method="POST">
-        <div class="row">Content:<input type="textarea" name="Content" value="{{ quest.Content }}" required></div>
-        <div class="row">Date:<input type="date" min="{{ minDate }}" max="{{ maxDate }}" name="EndDate" required></div>
-        <div class="row"><select name="Status" required>
+{% extends 'mainpage/main.html.twig' %}
+{% block content %}
+    <style>
+     .form {
+            background: white;
+            padding: 30px;
+            border: 1px solid lightgray;
+            border-top: 3px solid gray;
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+        }
+    </style>
+    <form class="form mt-3" action="{{ path('add_quest') }}" method="POST">
+        <h1 class="mb-3">Create new quest</h1>
+        <div class="row">Content:<input class="form-control" type="textarea" name="Content" value="{{ quest.Content }}" required></div>
+        <div class="row mb-3">Date:<input class="form-control" type="date" min="{{ minDate }}" max="{{ maxDate }}" name="EndDate" required></div>
+        <div class="row mb-3">Progress:<select class="form-control" name="Status" required>
                 <option value=0 {% if quest.Status == 0 %}selected{% endif %}>0%</option>
                 <option value=20 {% if quest.Status == 20 %}selected{% endif %}>20%</option>
                 <option value=40 {% if quest.Status == 40 %}selected{% endif %}>40%</option>
@@ -11,12 +23,12 @@
                 <option value=100 {% if quest.Status == 100 %}selected{% endif %}>100%</option>
             </select>
         </div>
-        <div class="row"><select name="user" required>
+        <div class="row">Select user:<select class="form-control" name="user" required>
                 {% for user in users %}
                     <option value="{{ user.id }}">{{ user.login }}</option>
                 {% endfor %}
             </select>
         </div>
-        <div class="row"><input type="submit" value="Submit"></div>
+        <div class="row"><input class="btn btn-lg btn-secondary mt-4" type="submit" value="Submit"></div>
     </form>
-</div>
+{% endblock %}
