--- a/templates/mainpage/main.html.twig
+++ b/templates/mainpage/main.html.twig
@@ -13,7 +13,7 @@
 {% block body %}
 <body class="hold-transition sidebar-mini">
 <div
-        class="wrapper">
+        class="wrapper" style="z-index: 5; position:relative;">
     <!-- Navbar -->
     {% include 'mainpage/navbar.html.twig' %}
     <!-- /.navbar -->
