--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,7 @@
 *{
     overflow: hidden;
 }
-
+/*Browse*/
 .main-footer{
     height: 40px;
     position:fixed;
@@ -22,4 +22,133 @@
     font-size: 30px;
     font-weight: bold;
     color: red; 
+}
+.form_new_quest {
+       background: white;
+       padding: 30px;
+       border: 1px solid lightgray;
+       border-top: 3px solid gray;
+       border-top-left-radius: 5px;
+       border-top-right-radius: 5px;
+}
+.modal-backdrop{
+    display:none;
+    z-index: -1;
+}
+tr th:first-child {
+    text-align: left;
+}
+tr td:first-child {
+    text-align: left;
+}
+.delete_post {
+    color: red;
+    transition: all 0.5s;
+}
+.delete_post:hover {
+    color: white;
+}
+.send_post {
+    color: blue;
+    transition: all 0.5s;
+}
+.delete_post:send {
+    color: white;
+}
+.loader {
+    display: none;
+    position: absolute;
+    top:43%;
+    left:50%;
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 2s linear infinite;
+    z-index: 19999992;
+}
+ .loader_show {
+    display: block;
+    position: absolute;
+    top:43%;
+    left:50%;
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 2s linear infinite;
+    z-index: 19999992;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+/*Show post*/
+.post_show {
+    background: white;
+    padding: 30px;
+    border: 1px solid lightgray;
+    border-top: 3px solid gray;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    color: black;
+    word-wrap: break-word;
+}
+/*Facebook*/
+.form_edit_facebook {
+    background: white;
+    padding: 30px;
+    border: 1px solid lightgray;
+    border-top: 3px solid gray;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    height: 100%;
+}
+/*Account data*/
+.form_edit_user {
+    background: white;
+    padding: 30px;
+    border: 1px solid lightgray;
+    border-top: 3px solid gray;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    height: 100%;
+}
+/*Create user*/
+.form_new_user{
+    background: white; padding: 30px; 
+    border: 1px solid lightgray; 
+    border-top: 3px solid gray; 
+    border-top-left-radius: 5px; 
+    border-top-right-radius: 5px;
+}
+/*Edit post*/
+.form_edit_post {
+    background: white;
+    padding: 30px;
+    border: 1px solid lightgray;
+    border-top: 3px solid gray;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+#post_form_name{
+    margin: 30px 10px;
+}
+/*New post*/
+.container_new_post {
+    background: white;
+    padding: 30px;
+    border: 1px solid lightgray;
+    border-top: 3px solid gray;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
