--- a/templates/posts/edit_post.html.twig
+++ b/templates/posts/edit_post.html.twig
@@ -1,20 +1,7 @@
 {% extends('mainpage/main.html.twig') %}
 {% block content %}
-    <style>
-        .form {
-            background: white;
-            padding: 30px;
-            border: 1px solid lightgray;
-            border-top: 3px solid gray;
-            border-top-left-radius: 5px;
-            border-top-right-radius: 5px;
-        }
-        #post_form_name{
-            margin: 30px 10px;
-        }
-    </style>
     <h2 class="mt-3 mb-4">Edit your Post</h2>
-    <div class="form">
+    <div class="form form_edit_post">
         {% if photoPath is defined %}
             <img style="height: 300px; width: auto; border-radius: 5px; border: 2px solid gray; margin-bottom: 30px;"
                  src="{{ asset('uploads/photos/') }}{{ photoPath }}">
