--- a/templates/posts/new_post.html.twig
+++ b/templates/posts/new_post.html.twig
@@ -1,27 +1,6 @@
 {% extends 'mainpage/main.html.twig' %}
 {% block content %}
-    <style>
-        .container-fluid {
-            background: white;
-            padding: 30px;
-            border: 1px solid lightgray;
-            border-top: 3px solid gray;
-            border-top-left-radius: 5px;
-            border-top-right-radius: 5px;
-        }
-        .form {
-            background: white;
-            padding: 30px;
-            border: 1px solid lightgray;
-            border-top: 3px solid gray;
-            border-top-left-radius: 5px;
-            border-top-right-radius: 5px;
-        }
-        #post_form_name {
-            margin: 30px 10px;
-        }
-    </style>
-    <div class="container-fluid mt-5">
+    <div class="container-fluid container_new_post mt-5">
 
         <h1 class="mb-5">Add new Post</h1>
 
