--- a/templates/posts/show_post.html.twig
+++ b/templates/posts/show_post.html.twig
@@ -1,18 +1,6 @@
 {% extends('mainpage/main.html.twig') %}
 {% block content %}
-    <style>
-        .post {
-            background: white;
-            padding: 30px;
-            border: 1px solid lightgray;
-            border-top: 3px solid gray;
-            border-top-left-radius: 5px;
-            border-top-right-radius: 5px;
-            color: black;
-            word-wrap: break-word;
-        }
-    </style>
-    <div class="post container">
+    <div class="post_show">
         <div class="row">
             <div class="col-6">
                 <h1>Post:</h1>
