--- a/templates/quests/new_quest.html.twig
+++ b/templates/quests/new_quest.html.twig
@@ -1,16 +1,6 @@
 {% extends 'mainpage/main.html.twig' %}
 {% block content %}
-    <style>
-     .form {
-            background: white;
-            padding: 30px;
-            border: 1px solid lightgray;
-            border-top: 3px solid gray;
-            border-top-left-radius: 5px;
-            border-top-right-radius: 5px;
-        }
-    </style>
-    <form class="form mt-3" action="{{ path('add_quest') }}" method="POST">
+    <form class="form form_new_quest mt-3" action="{{ path('add_quest') }}" method="POST">
         <h1 class="mb-3">Create new quest</h1>
         <div class="row">Content:<input class="form-control" type="textarea" name="Content" value="{{ quest.Content }}" required></div>
         <div class="row mb-3">Date:<input class="form-control" type="date" min="{{ minDate }}" max="{{ maxDate }}" name="EndDate" required></div>
