--- a/templates/users/edit_facebook.html.twig
+++ b/templates/users/edit_facebook.html.twig
@@ -1,21 +1,10 @@
 {% extends 'mainpage/main.html.twig' %}
 {% block content %}
-    <style>
-        .form {
-            background: white;
-            padding: 30px;
-            border: 1px solid lightgray;
-            border-top: 3px solid gray;
-            border-top-left-radius: 5px;
-            border-top-right-radius: 5px;
-            height: 100%;
-        }
-    </style>
             <div class="container-fluid">
                 <h1 class="m-3">Edit your facebook data</h1>
                 <div class="row mt-5">
                     <div class="col-sm-12 col-md-6 mb-3">
-                        <div class="form w-95">
+                        <div class="form form_edit_facebook w-95">
                             <h2 class="mb-3">
                                 <bold>Edit App ID:</bold>
                             </h2>
@@ -26,7 +15,7 @@
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-6 mb-3">
-                        <div class="form w-95">
+                        <div class="form form_edit_facebook w-95">
                             <h2 class="mb-3">
                                 <bold>Edit App Secret Token:</bold>
                             </h2>
@@ -39,7 +28,7 @@
                 </div>
                 <div class="row mt-5">
                     <div class="col-sm-12 col-md-6 mb-3">
-                        <div class="form w-95">
+                        <div class="form form_edit_facebook w-95">
                             <h2 class="mb-3">
                                 <bold>Edit Page ID:</bold>
                             </h2>
@@ -50,7 +39,7 @@
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-6 mb-3">
-                        <div class="form w-95">
+                        <div class="form form_edit_facebook w-95">
                             <h2 class="mb-3">
                                 <bold>Edit Facebook Access Token:</bold>
                             </h2>
