--- a/templates/users/edit_user.html.twig
+++ b/templates/users/edit_user.html.twig
@@ -1,21 +1,10 @@
 {% extends 'mainpage/main.html.twig' %}
 {% block content %}
-    <style>
-        .form {
-            background: white;
-            padding: 30px;
-            border: 1px solid lightgray;
-            border-top: 3px solid gray;
-            border-top-left-radius: 5px;
-            border-top-right-radius: 5px;
-            height: 100%;
-        }
-    </style>
     <div class="container-fluid">
         <h1 class="m-3">Edit your data</h1>
         <div class="row mt-5">
             <div class="col-sm-12 col-md-6 mb-3">
-                <div class="form w-95">
+                <div class="form form_edit_user w-95">
                     <h2 class="mb-3">
                         <bold>Edit Login:</bold>
                     </h2>
@@ -26,7 +15,7 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 mb-3">
-                <div class="form w-95">
+                <div class="form form_edit_user w-95">
                     <h2 class="mb-3">
                         <bold>Edit Password:</bold>
                     </h2>
@@ -39,7 +28,7 @@
         </div>
         <div class="row mt-3">
             <div class="col-12">
-                <div class="form w-95">
+                <div class="form form_edit_user w-95">
                     <h2 class="mb-3">
                         <bold>Edit Email:</bold>
                     </h2>
