--- a/templates/users/new_user.html.twig
+++ b/templates/users/new_user.html.twig
@@ -1,7 +1,7 @@
-<div class="container-fluid mt-5"
-     style="background: white; padding: 30px; border: 1px solid lightgray; border-top: 3px solid gray; border-top-left-radius: 5px; border-top-right-radius: 5px;">
+<div class="container-fluid form_new_user mt-5"
+     style="">
 
-    <h1 class="mb-5">Add new Post</h1>
+    <h1 class="mb-5">Add new User</h1>
 
     {{ form_start(form) }}
     {{ form_widget(form) }}
