--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -20,7 +20,7 @@
                         <input class="form-control mt-3" id="inputPassword" name="password" placeholder="Password" required type="password">
                         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
                         <div class="forgot mt-2">
-                            <a href="reset.html">Forgot password?</a>
+                            <a href="{{ path('reset') }}">Forgot password?</a>
                         </div>
                         <button class="btn btn-lg btn-primary " type="submit">Login</button>
                     </form>
