--- a/templates/posts/new_post.html.twig
+++ b/templates/posts/new_post.html.twig
@@ -5,8 +5,11 @@
         <h1 class="mb-5">Add new Post</h1>
 
         {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <button class="btn btn-dark mt-3">Add Post</button>
+        {{ form_row(form.Title) }}
+        {{ form_row(form.Content) }}
+        <div class="mt-3">{{ form_label(form.name) }}</div>
+       {{ form_widget(form.name) }}
+        <div><button class="btn btn-dark mt-5">Add Post</button></div>
         {{ form_end(form) }}
     </div>
     <script>
