--- a/templates/mainpage/navbar.html.twig
+++ b/templates/mainpage/navbar.html.twig
@@ -2,7 +2,7 @@
     <nav class="main-header navbar navbar-expand bg-white navbar-light border-bottom">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" data-widget="pushmenu" href="#" style="background-color:white">
+                <a class="nav-link close" data-widget="pushmenu" href="#" style="background-color:white">
                     <i class="fa fa-bars">
                         {# Left content #}
                     </i>
