--- a/templates/mainpage/sidebar.html.twig
+++ b/templates/mainpage/sidebar.html.twig
@@ -1,6 +1,6 @@
 {% block sidebar %}
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
-        <a class="brand-link" href="#">
+        <a class="brand-link" href="/">
             <i class="fab fa-docker" style="margin-left: 19px; size:3x"></i>
             <span class="brand-text font-weight-light" style="margin-left: 5px;">Pszemke.App!
             </span>
