--- a/templates/users/edit_facebook.html.twig
+++ b/templates/users/edit_facebook.html.twig
@@ -1,7 +1,7 @@
 {% extends 'mainpage/main.html.twig' %}
 {% block content %}
             <div class="container-fluid">
-                <h1 class="m-3">Edit your facebook data</h1>
+                <h1 style="margin:25px;">Edit your facebook data</h1>
                 <div class="row mt-5">
                     <div class="col-sm-12 col-md-6 mb-3">
                         <div class="form form_edit_facebook w-95">
