--- a/templates/quests/edit_quest.html.twig
+++ b/templates/quests/edit_quest.html.twig
@@ -1,33 +1,33 @@
 {% extends('mainpage/main.html.twig') %}
 {% block content %}
-    <div class="container">
+    <div class="post_show">
+        <h1 style="margin: 15px;">Edit quest</h1>
         <form action="{{ path('save_quest') }}" method="POST">
             <input type="hidden" name="id" value="{{ quest.Id }}">
             {% if is_granted('ROLE_ADMIN') %}
-                <div class="row">Content:<input type="textarea" name="Content" value="{{ quest.Content }}" required>
-                </div>
-                <div class="row">Date:<input type="date" min="{{ minDate }}" max="{{ maxDate }}" name="EndDate"
-                                             required>
-                </div>
-                <div class="row"><select name="user" required>
-                        {% for user in users %}
-                            <option value="{{ user.id }}" selected>{{ user.login }}</option>
-                        {% endfor %}
-                    </select>
-                </div>
+                Content:<textarea class="form-control" type="textarea" name="Content" value="{{ quest.Content }}" required></textarea>
+                Date:<input class="form-control" type="date" min="{{ minDate }}" max="{{ maxDate }}" name="EndDate" required>
+                Select user:
+                <select class="form-control form-control-lg">
+                    {% for user in users %}
+                        <option value="{{ user.id }}" selected>{{ user.login }}</option>
+                    {% endfor %}
+                </select>
             {% elseif is_granted('ROLE_USER') %}
                 {{ quest.Content }}
             {% endif %}
-            <div class="row"><select name="Status" required>
-                    <option value=0 {% if quest.Status == 0 %}selected{% endif %}>0%</option>
-                    <option value=20 {% if quest.Status == 20 %}selected{% endif %}>20%</option>
-                    <option value=40 {% if quest.Status == 40 %}selected{% endif %}>40%</option>
-                    <option value=60 {% if quest.Status == 60 %}selected{% endif %}>60%</option>
-                    <option value=80 {% if quest.Status == 80 %}selected{% endif %}>80%</option>
-                    <option value=100 {% if quest.Status == 100 %}selected{% endif %}>100%</option>
-                </select>
-            </div>
-            <div class="row"><input type="submit" value="Submit"></div>
+            Status:
+            <select class="form-control form-control-lg">
+                <option value="0" {% if quest.Status == 0 %} selected {% endif %}>0%</option>
+                <option value="20" {% if quest.Status == 20 %} selected {% endif %}>20%</option>
+                <option value="40" {% if quest.Status == 40 %} selected {% endif %}>40%</option>
+                <option value="60" {% if quest.Status == 60 %} selected {% endif %}>60%</option>
+                <option value="80" {% if quest.Status == 80 %} selected {% endif %}>80%</option>
+                <option value="100" {% if quest.Status == 100 %} selected {% endif %}>100%</option>
+            </select>
+            <input class="btn btn-warning mt-4 mr-2" type="submit" value="Submit">
+            <a href="/quest/{{quest.id}}"><div class="btn btn-secondary mt-4">Back</div>    
         </form>
+         
     </div>
 {% endblock %}
