--- a/templates/users/show_users.html.twig
+++ b/templates/users/show_users.html.twig
@@ -48,7 +48,7 @@
                     <h2 class="mt-4 mb-3">
                         <bold>Are you sure?</bold>
                     </h2>
-                    <h5>Do you want to delete post?</h5>
+                    <h5>Do you want to delete user?</h5>
                     <a class="action" id="/post/delete/">
                         <button class="delete_user btn-lg btn-outline-danger mt-5 mr-2">Delete</button>
                     </a>
