--- a/templates/quests/show_quests.html.twig
+++ b/templates/quests/show_quests.html.twig
@@ -22,11 +22,13 @@
                         </div>
                     </td>
                     <td>
-                        <a href="/quest/{{quests.id}}"><button class="btn btn-warning">Show</button></a>
+                        <a href="/show/quest/{{quests.id}}">
+                            <button class="btn btn-warning">Show</button>
+                        </a>
                     </td>
                     {% if is_granted('ROLE_ADMIN') %}
                         <td>
-                            <button class="btn btn-danger">Delete</button>
+                            <button id="{{quests.id}}" onclick="get_number(this.id)" class="btn btn-danger" data-target="#exampleModalCenterDelete" data-toggle="modal">Delete</button>
                         </td>
                     {% endif %}
                 </tr>
@@ -36,5 +38,41 @@
     <div class="row d-flex justify-content-center w-100 paginator mt-3">
         {{ knp_pagination_render(quests) }}
     </div>
+    <!-- Delete post modal -->
+    <div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade" id="exampleModalCenterDelete" role="dialog" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-body text-center">
+                    <h1>
+                        <i class="far fa-question-circle mt-2"></i>
+                    </h1>
+                    <h2 class="mt-4 mb-3">
+                        <bold>Are you sure?</bold>
+                    </h2>
+                    <h5>Do you want to delete quest?</h5>
+                    <a class="action" id="/post/delete/">
+                        <button class="delete btn-lg btn-outline-danger mt-5 mr-2">Delete</button>
+                    </a>
+                    <button class="btn-lg btn-outline-secondary mt-5 ml-2" data-dismiss="modal" type="button">Cancel</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Delete post modal -->
+     <script>
+        let number;
+
+        function get_number(clicked_id) {
+            number = clicked_id;
+        }
+
+        document.querySelector(".delete").onclick = function () {
+            delete_trigger()
+        };
+
+        function delete_trigger() {
+            window.location.href = '/quest/delete/'.concat(number);
+        }
+    </script>
 
 {% endblock %}
