--- a/templates/posts/show_post.html.twig
+++ b/templates/posts/show_post.html.twig
@@ -20,7 +20,8 @@
                 <h1>Photo:</h1>
 
                 {% if photoPath is defined %}
-                    <img class="mt-3" style="height: 300px; width: auto; border-radius: 5px; border: 2px solid gray; margin-bottom: 30px;" src="{{ asset('uploads/photos/') }}{{ photoPath }}">
+                    <img class="mt-3" style="height: auto; width: 70%; border-radius: 5px; border: 2px solid gray; margin-bottom: 30px;" src="{{ asset('uploads/photos/') }}{{ photoPath }}">
+                    <button class="btn btn-danger" style="width: 70%;">Delete photo</button>
                 {% else %}
                     <div style="width: 300px; height: 200px; border-radius: 5px; border: 2px solid gray; text-align: center; margin-bottom: 30px; padding-top: 70px; ">
                         <h1>No image</h1>
