--- a/templates/quests/show_one_quest.html.twig
+++ b/templates/quests/show_one_quest.html.twig
@@ -2,19 +2,31 @@
 {% block content %}
 
     <div class="post_show">
-        <h1 class = "mb-5">Quest</h1>
-        <h2>Content:</h2>
-            {{quest.content}}
-        <h2>Progress:</h2>
-        <div class="progress mt-2">
-            <div class="progress-bar bg-success" role="progressbar" style="width: {{ quest.status }}%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">{{ quest.status }}%</div>
+        <h1 class="mb-5">Quest</h1>
+
+        <div class="row">
+            <div class="col-6">
+                <h2>Content:</h2>
+                {{quest.content}}
+            </div>
+            <div class="col-6">
+                <h2>Add date:</h2>
+                {{quest.addDate|date("m/d/Y")}}
+                <h2 class="mt-3">Deadline:</h2>
+                {{quest.endDate|date("m/d/Y")}}</br>
         </div>
-        <h2>Add date:</h2>
-            {{quest.addDate|date("m/d/Y")}}
-        <h2>Deadline:</h2>
-            {{quest.endDate|date("m/d/Y")}}</br>
-        <a href="/quest/edit/{{quest.id}}"><button class="btn btn-warning mt-4">Edit</button>
-        <a href="/quests/{{app.user.id}}"><button class="btn btn-secondary mt-4 ml-2">Back</button></a>
+    </div>
+
+    <h2 class="mt-3">Progress:</h2>
+    <div class="progress mt-4 mb-3">
+        <div class="progress-bar bg-success" role="progressbar" style="width: {{ quest.status }}%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">{{ quest.status }}%</div>
+    </div>
+
+    <a href="/quest/edit/{{quest.id}}">
+        <button class="btn btn-warning mt-4">Edit</button>
+        <a href="/quests/{{app.user.id}}">
+            <button class="btn btn-secondary mt-4 ml-2">Back</button>
+        </a>
     </div>
 
 {% endblock %}
